[tool.poetry]
name = "genav"
version = "0.1.0"
description = "A robot navigation controller learned using a genetic algorithm-based approach."
authors = ["Jacob Anderson <andersonjwan@gmail.com>", "Elena Oikonomou <eln.economou@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
py-genalg = {git = "https://github.com/andersonjwan/genalg.git", branch = "main"}
kaleido = "==0.2.0"
matplotlib = "^3.5.2"
numpy = "^1.22.3"
pandas = "^1.4.2"
plotly = "^5.7.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
